# rs-openai-tools

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  temp.json
openai-tools/: Cargo.toml  README.md
openai-tools/src/: chat.rs  common.rs  errors.rs  json_schema.rs  lib.rs  responses.rs  structured_output.rs  tests.rs
openai-tools/src/audio/: mod.rs  request.rs  response.rs
openai-tools/src/batch/: mod.rs  request.rs  response.rs
openai-tools/src/chat/: mod.rs  request.rs  response.rs
openai-tools/src/common/: auth.rs  client.rs  errors.rs  function.rs  message.rs  mod.rs  models.rs  parameters.rs  role.rs  structured_output.rs  tool.rs  usage.rs
openai-tools/src/conversations/: mod.rs  request.rs  response.rs
openai-tools/src/embedding/: mod.rs  request.rs  response.rs
openai-tools/src/files/: mod.rs  request.rs  response.rs
openai-tools/src/fine_tuning/: mod.rs  request.rs  response.rs
openai-tools/src/images/: mod.rs  request.rs  response.rs
openai-tools/src/models/: mod.rs  request.rs  response.rs
openai-tools/src/moderations/: mod.rs  request.rs  response.rs
openai-tools/src/realtime/: audio.rs  client.rs  conversation.rs  mod.rs  session.rs  stream.rs  vad.rs
openai-tools/src/realtime/events/: client.rs  mod.rs  server.rs
openai-tools/src/responses/: mod.rs  request.rs  response.rs
openai-tools/src/test_rsc/: curl_sample.sh  long_text.txt  sample_instruction.txt
openai-tools/tests/: audio_integration.rs  batch_integration.rs  chat_integration.rs  conversations_integration.rs  embedding_integration.rs  files_integration.rs  fine_tuning_integration.rs  images_integration.rs  models_by_version_integration.rs  models_integration.rs  moderations_integration.rs  realtime_integration.rs  responses_integration.rs
