[workspace]
members = ["openai-tools"]
resolver = "2"

[workspace.package]
authors = ["akitenkrad"]
description = "Tools for OpenAI API"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/akitenkrad/rs-openai-tools"
version = "0.5.0"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
derive-new = "0.7.0"
dotenvy = "0.15.7"
image = "0.25.6"
request = { package = "reqwest", version = "0.12.22" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tiktoken-rs = "0.7.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.metadata.release]
tag-prefix = ""
