[workspace]
members = ["openai-tools"]
resolver = "2"

[workspace.package]
authors = ["akitenkrad"]
description = "Tools for OpenAI API"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/akitenkrad/rs-openai-tools"
version = "0.5.3"

[workspace.dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
derive-new = "0.7.0"
dotenvy = "0.15.7"
image = "0.25.8"
request = { package = "reqwest", version = "0.12.23" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.16"
tiktoken-rs = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
test-log = { version = "0.2.18", features = ["trace"] }

[workspace.metadata.release]
tag-prefix = ""
