[package]
name = "openai-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
fxhash.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.release]
tag = true
